--- a/package.json
+++ b/package.json
@@ -9,15 +9,27 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@animxyz/react": "^0.6.7",
+    "@heroicons/react": "^2.1.5",
     "@next/bundle-analyzer": "^14.0.3",
     "@reduxjs/toolkit": "^1.9.7",
     "@types/redux-persist": "^4.3.1",
     "@walletconnect/sign-client": "^2.10.6",
     "@web3auth/base": "^7.2.0",
     "@web3auth/modal": "^7.2.0",
+    "@xmtp/content-type-reaction": "^1.0.1",
+    "@xmtp/content-type-read-receipt": "^1.0.0",
+    "@xmtp/content-type-remote-attachment": "^1.0.7",
+    "@xmtp/content-type-reply": "^1.0.0",
+    "@xmtp/xmtp-js": "^10.2.0",
+    "async-mutex": "^0.4.0",
     "autoprefixer": "10.4.14",
-    "ethers": "^6.4.2",
+    "buffer": "^6.0.3",
+    "dexie": "^4.0.8",
+    "dexie-react-hooks": "^1.1.7",
+    "ethers": "^6.13.2",
     "formidable": "^3.5.1",
+    "javascript-time-ago": "^2.5.9",
     "multiparty": "^4.2.3",
     "next": "14.0.3",
     "next-redux-wrapper": "^8.1.0",
@@ -25,10 +37,13 @@
     "react": "^18",
     "react-dom": "^18",
     "react-redux": "^8.1.3",
+    "react-router-dom": "^6.26.1",
+    "react-time-ago": "^7.3.3",
     "redux": "^4.2.1",
     "styled-components": "^6.1.1",
     "styled-reset": "^4.5.1",
-    "web3": "^4.3.0"
+    "web3": "^4.3.0",
+    "web3.storage": "^4.5.5"
   },
   "devDependencies": {
     "@babel/preset-env": "^7.23.7",
