--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@animxyz/react": "^0.6.7",
+    "@ethsign/sp-sdk": "^0.7.2",
     "@heroicons/react": "^2.1.5",
     "@next/bundle-analyzer": "^14.0.3",
     "@reduxjs/toolkit": "^1.9.7",
@@ -29,10 +30,12 @@
     "dexie-react-hooks": "^1.1.7",
     "ethers": "^6.13.2",
     "formidable": "^3.5.1",
+    "i": "^0.3.7",
     "javascript-time-ago": "^2.5.9",
     "multiparty": "^4.2.3",
     "next": "14.0.3",
     "next-redux-wrapper": "^8.1.0",
+    "npm": "^10.8.3",
     "phaser": "^3.70.0",
     "react": "^18",
     "react-dom": "^18",
