--- a/package.json
+++ b/package.json
@@ -24,7 +24,6 @@
     "@xmtp/content-type-reply": "^1.0.0",
     "@xmtp/xmtp-js": "^10.2.0",
     "async-mutex": "^0.4.0",
-    "autoprefixer": "10.4.14",
     "buffer": "^6.0.3",
     "dexie": "^4.0.8",
     "dexie-react-hooks": "^1.1.7",
@@ -56,9 +55,12 @@
     "@types/react-dom": "^18",
     "@types/react-redux": "^7.1.28",
     "@types/styled-components": "^5.1.32",
+    "autoprefixer": "^10.4.20",
     "babel-loader": "^9.1.3",
     "eslint": "^8",
     "eslint-config-next": "14.0.3",
+    "postcss": "^8.4.44",
+    "tailwindcss": "^3.4.10",
     "typescript": "^5"
   }
 }
