--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Vroombuddy",
+  "name": "vroombuddy",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -29,7 +29,6 @@
     "dexie-react-hooks": "^1.1.7",
     "ethers": "^6.13.2",
     "formidable": "^3.5.1",
-    "i": "^0.3.7",
     "javascript-time-ago": "^2.5.9",
     "multiparty": "^4.2.3",
     "next": "14.0.3",
